# github-hotspots

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHECK_AND_UPDATE_REPORTS.cmd  LICENSE  PROJECT_LOG.md  README.md  pyproject.toml
.github/workflows/: daily.yml  pages.yml  weekly.yml
config/: hotspots.yaml
data/snapshots/: 2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
docs/: AUTOMATION.md  CHROME_EXTENSION_SETUP_CN.md  LOCAL_CODEX_API.md  OPERATIONS.md  PRODUCT_SPEC.md  PROJECT_PLAN.md  PUBLISHING_PLAYBOOK.md  REFERENCE_ANALYSIS.md  XIAOHONGSHU_CONTENT_V2_PLAN.md
prompts/: project_master_prompt_zh.md  repository_summary_zh.md
publish/: README.md
publish/history/: INDEX.json  INDEX.md
reports/daily/: 2026-07-11.ai.xiaohongshu.md  2026-07-11.json  2026-07-11.md  2026-07-11.xiaohongshu.md  2026-07-12.ai.xiaohongshu.md  (+51 more)
schemas/: repository_summary.schema.json
scripts/: build_site.py
site/: app.js  index.html  styles.css
templates/: digest.md.j2  dual_digest.md.j2  xiaohongshu.md.j2
tests/: test_automation.py  test_boards.py  test_cli.py  test_config.py  test_editorial.py  test_evidence.py  test_github_client.py  test_pipeline.py  test_poster.py  test_powershell_automation.py  test_publication_evidence.py  test_publish_bundle.py  test_ranking.py  test_report.py  test_rerender.py  test_site_builder.py  test_snapshot.py  test_summarizer.py  test_trending.py
(+182 files in other folders)
