[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-hotspots"
version = "0.1.0"
description = "Automated daily and weekly GitHub hotspot discovery and reporting."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "Pillow>=10.4",
  "typer>=0.12",
  "tzdata>=2025.2; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
github-hotspots = "github_hotspots.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
github_hotspots = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --cov=github_hotspots --cov-report=term-missing"

[tool.coverage.run]
source = ["github_hotspots"]
branch = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
